Broader scrollbar. Fix #1382

--- a/app/less/desktop.less
+++ b/app/less/desktop.less
@@ -665,17 +665,17 @@ a.footer_link.active:active {
   .nano {
     & > .nano-pane {
       background : rgba(0,0,0,0.0);
-      width      : 12px;
-      right: 0px;
+      width      : 9px;
+      right      : 10px;
 
       .rounded(0);
       .noTransition();
 
       & > .nano-slider {
         background: rgba(30, 85,127 , 0.3);
-        margin: 0 5px;
+        margin: 0;
 
-        .rounded(0);
+        .rounded(2px);
       }
     }
   }
